# http-client

./: .gitignore  Cargo.toml  README.md
src/: client.rs  config.rs  error.rs  lib.rs  main.rs
src/examples/: download_stream.rs
src/json/: json.rs  mod.rs  parser.rs  tests.rs
